# ar_benchmark

./: CMakeLists.txt  README.md  ar_benchmark.pro  main.cpp  main.qml  tester.cpp  tester.h
cmake/: FindALVAR.cmake  FindARToolKitPlus.cmake
data/alvar/: README
data/artoolkitplus/: README
data/aruco/: README
src/: benchmark.cpp
